--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craftsvilla</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Happy+Monkey&family=Inknut+Antiqua:wght@400;800&family=Open+Sans:wght@300;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -13,22 +16,41 @@
     </div>
     <div class="navbar">
         <div class="button">
-            <h1>Home</h1>
+            <h1><a href="index.html">Home</a></h1>
         </div>
         <div class="button">
-            <h1>Booking</h1>
+            <h1><a href="booking.html">Booking</a></h1>
         </div>
         <div class="button">
-            <h1>Feedback</h1>
+            <h1><a href="feedback.html">Feedback</a></h1>
         </div>
         <div class="button">
-            <h1>Gallery</h1>
+            <h1><a href="gallery.html">Gallery</a></h1>
         </div>
     </div>
+    <h2>Experience, Art, Enjoyment</h2>
     <div class="main">
-        <div class="img1">
+        <div class="upper">
             <img src="./images/mosaic.jpg">
             <h3>Mosaic Art</h3>
+            <p>If puzzles were an artform.. Try your hands at crafting mosaic</p>
+        </div>
+        <div class="upper">
+            <img src="./images/watercolor.jpg">
+            <h3>Watercolor</h3>
+            <p>While painting with watercolour the possibilities are endless.</p>
+        </div>
+    </div>
+    <div>
+        <div class="lower">
+            <img src="./images/canvas.jpg">
+            <h3>Canvas painting</h3>
+            <p>Nothing brings out the artistic feeling more than painting on a canvas.</p>
+        </div>
+        <div class="lower">
+            <img src="./images/more.jpg">
+            <h3>More to come</h3>
+            <p>More workshops will be available soon!</p>
         </div>
     </div>
 </body>
