homepage mostly done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <div class="header">
         <h1 id="title">Craftsvilla</h1>
-
     </div>
     <div class="navbar">
         <div class="button">
@@ -29,28 +28,22 @@
         </div>
     </div>
     <h2>Experience, Art, Enjoyment</h2>
-    <div class="main">
-        <div class="upper">
+    <div class="upper">
+        <div id="first-image">
             <img src="./images/mosaic.jpg">
             <h3>Mosaic Art</h3>
-            <p>If puzzles were an artform.. Try your hands at crafting mosaic</p>
+            <p>If puzzles were an artform.. Try your hands at crafting mosaic.</p>
+            <img src="./images/canvas.jpg">
+            <h3>Canvas Painting</h3>
+            <p>Nothing brings out the artistic feeling more than painting on a canvas.</p>
         </div>
-        <div class="upper">
+        <div id="second-image">
             <img src="./images/watercolor.jpg">
             <h3>Watercolor</h3>
             <p>While painting with watercolour the possibilities are endless.</p>
-        </div>
-    </div>
-    <div>
-        <div class="lower">
-            <img src="./images/canvas.jpg">
-            <h3>Canvas painting</h3>
-            <p>Nothing brings out the artistic feeling more than painting on a canvas.</p>
-        </div>
-        <div class="lower">
             <img src="./images/more.jpg">
-            <h3>More to come</h3>
-            <p>More workshops will be available soon!</p>
+            <h3>More to come!</h3>
+            <p>More workshops will be available soon. Brand new experiences.</p>
         </div>
     </div>
 </body>
