--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>While painting with watercolour the possibilities are endless.</p>
             <img src="./images/more.jpg">
             <h3>More to come!</h3>
-            <p>More workshops will be available soon. helloBrand new experiences.</p>
+            <p>More workshops will be available soon. Brand new experiences.</p>
         </div>
     </div>
 </body>
