--- a/booking.html
+++ b/booking.html
@@ -55,5 +55,9 @@
         <input type="time">
         <button>Submit</button>
     </div>
+    <div class="footer">
+        <h1><a href="index.html">About us</a></h1>
+        <h1><a href="index.html">Contact<a></a></h1>
+    </div>
 </body>
 </html>
