--- a/feedback.html
+++ b/feedback.html
@@ -45,5 +45,9 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <h1><a href="index.html">About us</a></h1>
+        <h1><a href="index.html">Contact<a></a></h1>
+    </div>
 </body>
 </html>
