--- a/gallery.html
+++ b/gallery.html
@@ -42,5 +42,9 @@
             <img src="./images/gallery/autumn.jpg">
         </div>
     </div>
+    <div class="footer">
+        <h1><a href="index.html">About us</a></h1>
+        <h1><a href="index.html">Contact<a></a></h1>
+    </div>
 </body>
 </html>
